2007-02-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* FileWebRequestTest.cs: Separate tests that fail on Windows due to
	bug #80700, and ignore them on Windows.

2007-02-01  Gert Driesen  <drieseng@users.sourceforge.net>

	* WebProxyTest.cs: Added tests that cover regression introduced by
	previous change.

2007-01-31  Ilya Kharmatsky  <ilyak -at- mainsoft.com>

	* IPAddressTest.cs, WebProxyTest.cs, WebHeaderCollectionTest.cs,
	  ServicePointManagerTest.cs, ServicePointTest.cs:
	  Excluded not working in Grasshopper tests, under 'TARGET_JVM'
	  directive
	* HttpListenerPrefixCollectionTest.cs, HttpListenerTest.cs,
	  HttpListenerBasicIdentityTest.cs, HttpListener2Test.cs:
	  Excluded entire test fixture, since HttpListener still not 
	  implemented in Grasshopper.
	* FileWebRequestTest.cs, FileWebResponseTest.cs:
	  Excluded not working in Grasshopper tests and provided different
	  implementation of helper methods - under 'TARGET_JVM'

2007-01-30  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpWebRequestTest.cs : use correct attribute.

2007-01-29  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpWebRequestTest.cs: Added tests for case-sensitive dealing with
	HTTP method.
	* SocketResponser.cs: Utility class for tests that require a listener.

2007-01-29  Ilya Kharmatsky <ilyak -at- mainsoft.com>
	
	* IPAddressTest.cs: Fixed missing bracket (under TARGET_JVM)

2007-01-28  Ilya Kharmatsky <ilyak -at- mainsoft.com>

	* IPAddressTest.cs: Added 'Ignore' attribute for 
	Constructor0_Address_Invalid test under TARGET_JVM directive.

2007-01-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* IPAddressTest.cs: Added test for invalid addresses. Fixed 4-byte
	test on 2.0 profile.

2007-01-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* FileWebRequestTest.cs: Reworked tests to no longer rely on TMPDIR.
	Added tests for ConnectionGroupName, ContentLength, ContentType,
	Credentials, GetRequestStream, GetResponse, Method, PreAuthenticate,